--- a/pages/egypt.html
+++ b/pages/egypt.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/countries.css" />
     <link rel="stylesheet" href="../CSS/footer.css" />
+     <!-- Font Awesome Icon Library -->
+     <link
+     rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+   />
+   <!-- js -->
     <script src="../JS/main.js" defer></script>
+     <!-- scroll window js  -->
+     <script src="../JS/index.js" defer></script>
     <title>Egyptian Food</title>
   </head>
   <body>
@@ -481,7 +489,7 @@
               placeholder="Enter your eamil"
             />
 
-            <button type="submit" class="btn btn-login">Subscribe</button>
+            <button type="submit" class="btn btn-color">Subscribe</button>
           </form>
         </div>
 
@@ -527,31 +535,19 @@
           </ul>
         </div>
         <div class="social">
-          <h3 class="footer--title">Contact Us</h3>
+          <h4 class="footer--title">Contact Us</h4>
           <ul class="socialIcons">
-            <li class="socialIcons__items">
-              <a href="" class="social"
-                ><img
-                  class="social_image"
-                  src="../Assets/instagram logo.png"
-                  alt=""
-              /></a>
+            <li class="socialIcons__list">
+              <a href="" class="social-btn"
+                ><i class="fa fa-facebook "></i></a>
             </li>
             <li class="socialIcons__items">
-              <a href="" class="social"
-                ><img
-                  class="social_image"
-                  src="../Assets/facebook logo.png"
-                  alt=""
-              /></a>
+              <a href="" class="social-btn"
+                ><i class="fa fa-twitter"></i></a>
             </li>
             <li class="socialIcons__items">
-              <a href="" class="social"
-                ><img
-                  class="social_image"
-                  src="../Assets/twitter logo.png"
-                  alt=""
-              /></a>
+              <a href="" class="social-btn"
+                ><i class="fa fa-instagram"></i></a>
             </li>
           </ul>
         </div>
@@ -564,5 +560,10 @@
         </p>
       </div>
     </footer>
+    <div class="scroll-btn">
+      <button id="scroll-top-btn">
+        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+      </button>
+    </div>
   </body>
 </html>
