--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="../CSS/nav.css">
     <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/countries.css">
     <link rel="stylesheet" href="../CSS/about.css" />
    <link rel="stylesheet" href="../CSS/footer.css">
 
@@ -56,11 +57,14 @@
       </div>
     </nav>
     <main class="main">
+      <section class="hero_section">
+        <h1 class="hero_title">About AFRICA FOOD</h1>
+      </section>
       <section class="about_afrifood">
         <div class="about_afrifood-wrapper">
           <img src="../Assets/top-view-food-frame-with-copy-space.jpg" alt="" />
           <div>
-            <h1>About AFRICA FOOD</h1>
+            <h2>Explore African Food</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipiscing elit felis
               ultrices vestibulum quam sagittis, curae cum lobortis hac neque
