--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/nav.css" />
     <link rel="stylesheet" href="../CSS/style.css" />
-
+    <link rel="stylesheet" href="../CSS/countries.css">
     <link rel="stylesheet" href="../CSS/contact.css" />
     <link rel="stylesheet" href="../CSS/footer.css" />
    <!-- Font Awesome Icon Library -->
@@ -48,10 +48,13 @@
       </div>
     </nav>
     <main class="main">
+      <section class="hero_section">
+        <h1 class="hero_title">Contact</h1>
+      </section>
       <section class="contact-page">
         <div class="contactPage_wrapper">
           <div class="send--message">
-            <h2>Send Message</h2>
+            <h3>Send Message</h3>
             <form
               action="https://formsubmit.co/4396b8d8ff36c632a62e0b7304eb0503 "
               method="POST"
@@ -112,7 +115,7 @@
             </form>
           </div>
           <div class="socoilMedia--contact">
-            <h1 class="contact-page__title">Contact Us</h1>
+           
             <p>We are open for any suggestion</p>
             <div class="address">
               <ul class="addressIcons">
