--- a/pages/drcongo.html
+++ b/pages/drcongo.html
@@ -51,7 +51,7 @@
       <section class="hero_section">
         <h1 class="hero_title">Dr. Congo Recipies</h1>
       </section>
-      <section class="food" id="drcondo-food">
+      <section class="food" id="drcongo-food">
         <div class="food_wrapper">
           <h2 class="subTitle">Cultural Recipies</h2>
           <div class="min_wrapper">
@@ -59,7 +59,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Liboke.jpg.webp"
-                alt=""
+                alt="liboke drcongo-food"
                 class="food-img"
               />
 
@@ -133,12 +133,12 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Kwanga-congo.webp"
-                alt=""
+                alt="kwonga drcongo-food"
                 class="food-img"
               />
 
               <div>
-                <h3 class="food-name">Chikwanga(Kwanga)</h3>
+                <h3 class="food-name">Chikwanga (Kwanga)</h3>
                 <p class="food-description">
                   Chikwange is usually not prepared at home. Its preparation
                   time is quite long; it may take one to two weeks. You have to
@@ -157,7 +157,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Lituma-960x960.jpg.webp"
-                alt=""
+                alt="lituma drcongo-food"
                 class="food-img"
               />
 
@@ -179,7 +179,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Ndakala-960x960.jpg.webp"
-                alt=""
+                alt="Ndakala drcongo-food"
                 class="food-img"
               />
 
@@ -203,7 +203,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Plantains-960x960.jpg.webp"
-                alt=""
+                alt="plantains drcongo-food"
                 class="food-img"
               />
 
@@ -226,7 +226,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Fumbwa-960x960.jpg.webp"
-                alt=""
+                alt="Fumbwa drcongo-food"
                 class="food-img"
               />
 
@@ -249,7 +249,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Matembele-960x960.jpg.webp"
-                alt=""
+                alt="Matembele drcongo-food"
                 class="food-img"
               />
 
@@ -275,7 +275,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Dr. Congo/Mayebo-1-960x1200.jpg.webp"
-                alt=""
+                alt="mayebo drcongo-food"
                 class="food-img"
               />
 
@@ -478,8 +478,8 @@
             </div>
           </div>
           <div class="navigate_wrapper">
-            <a href="#drcondo-food" class="navigate next active">1</a>
-            <a href="#drcondo-food" class="navigate prev active">2</a>
+            <a href="#drcongo-food" class="navigate next active">1</a>
+            <a href="#drcongo-food" class="navigate prev active">2</a>
           </div>
         </div>
       </section>
@@ -497,7 +497,7 @@
               placeholder="Enter your eamil"
             />
 
-            <button type="submit" class="btn btn-color">Subscribe</button>
+            <button type="submit" class="btn btn-login">Subscribe</button>
           </form>
         </div>
 
