--- a/pages/nigeria.html
+++ b/pages/nigeria.html
@@ -13,6 +13,7 @@
      rel="stylesheet"
      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
    />
+   
    <!-- js -->
     <script src="../JS/main.js" defer></script> 
      <!-- scroll window js  -->
@@ -203,7 +204,7 @@
               </div>
             </div>
 
-            <div class="min_wrapper-box">
+            <div class="min_wrapper-box" data-aos = 'fade-up'>
               <img
                 src="../Assets/food/Nigeria/Chicken-Empanadas-683x1024.jpg"
                 alt="Chicken-Empanadas nigerian-food"
@@ -211,7 +212,7 @@
               />
 
               <div>
-                <h3 class="food-name">Bobotie</h3>
+                <h3 class="food-name">Chicken-Empanadas</h3>
                 <p class="food-description">
                   If you’re a fan of Mexican empanadas, expand your palate by
                   trying the Nigerian meat pie. Ground beef is seasoned and
