--- a/pages/about.html
+++ b/pages/about.html
@@ -102,19 +102,19 @@
           <h3 class="footer--title">Location</h3>
           <ul class="footer--list">
             <li class="footer--listItems">
-              <a href="" class="countries">Nigeria</a>
+              <a href="./nigeria.html" class="countries">Nigeria</a>
             </li>
             <li class="footer--listItems">
-              <a href="" class="countries">Ethiopia</a>
+              <a href="./ethiopia.html" class="countries">Ethiopia</a>
             </li>
             <li class="footer--listItems">
-              <a href="" class="countries">South Africa</a>
+              <a href="./southafrican.html" class="countries">South Africa</a>
             </li>
             <li class="footer--listItems">
-              <a href="" class="countries">Egypt</a>
+              <a href="./egypt.html" class="countries">Egypt</a>
             </li>
             <li class="footer--listItems">
-              <a href="" class="countries">Dr. Congo</a>
+              <a href="./drcongo.html" class="countries">Dr. Congo</a>
             </li>
           </ul>
         </div>
@@ -128,7 +128,7 @@
               <a href="#" class="quickLinks--link">About</a>
             </li>
             <li class="footer--listItems">
-              <a href="./food.html" class="quickLinks--link">Menu</a>
+              <a href="../index.html#countries-food" class="quickLinks--link">Countries Food</a>
             </li>
             <li class="footer--listItems">
               <a href="./contact.html" class="quickLinks--link">Contact</a>
