--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/thanks.css">
+    <!-- Font Awesome Icon Library -->
+   <link
+   rel="stylesheet"
+   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+ />
     <title>Thank you</title>
 </head>
 <body>
@@ -15,7 +19,7 @@
         <section class="thanks">
            <div class="thanks_wrapper">
             <h1>Thank you for your Suggestion</h1>
-            <a href="../index.html" class="btn btn-color">GO BACK <i class='bx bxs-home-alt-2'></i>  </a>
+            <a href="../index.html" class="btn btn-color">GO BACK <i class='fa fa-home'></i>  </a>
            </div>
         </section>
     </main>
